--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webdriverIO-with-cucumberBDD",
-  "version": "2.0.2",
-  "description": "WebDriverIO-v6 bindings for Node.js with Cucumber",
+  "version": "2.0.3",
+  "description": "WebDriverIO-v7 bindings for Node.js with Cucumber",
   "author": "Amiya Pattanaik <pattnaik_amiya@yahoo.com>",
   "license": "MIT",
   "homepage": "https://github.com/amiya-pattnaik/webdriverIO-with-cucumberBDD",
@@ -12,6 +12,7 @@
     "junit-report": "node_modules/.bin/junit-viewer --results=./test/reports/junit-results --save=junit-results.html && open junit-results.html",
     "test-sauce": "wdio ./test/config/wdio.sauce.conf.js",
     "test-browserstack": "wdio ./test/config/wdio.browserstack.conf.js",
+    "test-lambdatest": "wdio ./test/config/wdio.lambdatest.conf.js",
     "test-local": "npm run allure:history && wdio ./test/config/wdio.local.conf.js",
     "test-mobile": "wdio ./test/config/wdio.appium.conf.js"
   },
@@ -29,25 +30,24 @@
     "type": "git",
     "url": "https://github.com/amiya-pattnaik/webdriverIO-with-cucumberBDD.git"
   },
-  "dependencies": {},
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
     "@babel/plugin-syntax-export-default-from": "^7.8.3",
     "@babel/preset-env": "^7.9.0",
     "@babel/register": "^7.9.0",
-    "@wdio/allure-reporter": "^6.4.7",
-    "@wdio/appium-service": "^6.4.7",
-    "@wdio/browserstack-service": "^6.4.7",
-    "@wdio/cli": "^6.0.5",
-    "@wdio/cucumber-framework": "^6.5.0",
-    "@wdio/junit-reporter": "^6.4.7",
-    "@wdio/local-runner": "^6.0.5",
-    "@wdio/sauce-service": "^6.0.4",
-    "@wdio/selenium-standalone-service": "^6.4.7",
-    "@wdio/spec-reporter": "^6.0.4",
-    "@wdio/sync": "^6.0.1",
-    "allure-commandline": "^2.13.0",
+    "@wdio/allure-reporter": "^7.29.1",
+    "@wdio/appium-service": "^7.29.1",
+    "@wdio/browserstack-service": "^7.29.1",
+    "@wdio/cli": "^7.29.1",
+    "@wdio/cucumber-framework": "^7.29.0",
+    "@wdio/junit-reporter": "^7.29.1",
+    "@wdio/local-runner": "^7.29.1",
+    "@wdio/sauce-service": "^7.29.1",
+    "@wdio/selenium-standalone-service": "^7.25.1",
+    "@wdio/spec-reporter": "^7.29.1",
+    "@wdio/sync": "^7.27.0",
+    "allure-commandline": "^2.20.1",
     "babel-plugin-source-map-support": "^2.1.3",
     "chai": "^4.2.0",
     "cucumber-tag-expressions": "^2.0.3",
@@ -57,15 +57,17 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "grunt": "^1.3.0",
-    "grunt-cli": "^1.3.2",
-    "grunt-cucumberjs": "^2.0.2",
-    "grunt-webdriver": "^3.0.0",
-    "junit-viewer": "^4.11.1",
+    "junit-viewer": "^4.4.0",
     "node-excel-to-json": "0.0.3",
-    "selenium-standalone": "^6.20.0",
     "underscore": "^1.11.0",
-    "wdio-chromedriver-service": "^6.0.2",
-    "wdio-json-reporter": "^2.0.0"
+    "wdio-chromedriver-service": "^7",
+    "wdio-json-reporter": "^3.0.0",
+    "wdio-lambdatest-service": "^1.0.14",
+    "webdriverio": "^7"
+  },
+  "dependencies": {
+    "@wdio/codemod": "^0.12.0",
+    "fibers": "^4.0.3",
+    "jscodeshift": "^0.14.0"
   }
 }
