--- a/package.json
+++ b/package.json
@@ -1,21 +1,11 @@
 {
   "name": "webdriverIO-with-cucumberBDD",
-  "version": "2.0.3",
-  "description": "WebDriverIO-v7 bindings for Node.js with Cucumber",
+  "version": "2.0.4",
+  "description": "WebDriverIO-v8 bindings for Node.js with Cucumber",
   "author": "Amiya Pattanaik <pattnaik_amiya@yahoo.com>",
   "license": "MIT",
-  "homepage": "https://github.com/amiya-pattnaik/webdriverIO-with-cucumberBDD",
   "main": "./node_modules/.bin/wdio",
-  "scripts": {
-    "allure:history": "mkdir -p allure-report/history ./test/reports/allure-results/history && cp -a allure-report/history ./test/reports/allure-results/",
-    "allure-report": "node_modules/.bin/allure generate --clean ./test/reports/allure-results && allure open -p 5050",
-    "xunit-report": "node_modules/.bin/xunit-viewer --server -p=3000 -t='Automation Test Report' --results=./test/reports/junit-results --output=./xunit-report/xunit-report.html",
-    "test-sauce": "wdio ./test/config/wdio.sauce.conf.js",
-    "test-browserstack": "wdio ./test/config/wdio.browserstack.conf.js",
-    "test-lambdatest": "wdio ./test/config/wdio.lambdatest.conf.js",
-    "test-local": "npm run allure:history && wdio ./test/config/wdio.local.conf.js",
-    "test-mobile": "wdio ./test/config/wdio.appium.conf.js"
-  },
+  "type": "module",
   "keywords": [
     "selenium",
     "web testing",
@@ -30,44 +20,47 @@
     "type": "git",
     "url": "https://github.com/amiya-pattnaik/webdriverIO-with-cucumberBDD.git"
   },
+  "homepage": "https://github.com/amiya-pattnaik/webdriverIO-with-cucumberBDD",
+  "bugs": {
+    "url": "https://github.com/amiya-pattnaik/webdriverIO-with-cucumberBDD/issues"
+  },
+  "scripts": {
+    "allure:history": "mkdir -p allure-report/history ./test/reports/allure-results/history && cp -a allure-report/history ./test/reports/allure-results/",
+    "allure-report": "node_modules/.bin/allure generate --clean ./test/reports/allure-results && allure open -p 5050",
+    "xunit-report": "node_modules/.bin/xunit-viewer --server -p=3000 -t='Automation Test Report' --results=./test/reports/junit-results --output=./xunit-report/xunit-report.html",
+    "test-sauce": "wdio wdio.sauce.conf.ts",
+    "test-browserstack": "wdio wdio.browserstack.conf.ts",
+    "test-lambdatest": "wdio wdio.lambdatest.conf.ts",
+    "test-local": "wdio  wdio.local.conf.ts",
+    "test-mobile": "wdio wdio.appium.conf.ts"
+  },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-syntax-export-default-from": "^7.8.3",
-    "@babel/preset-env": "^7.9.0",
-    "@babel/register": "^7.9.0",
-    "@wdio/allure-reporter": "^7.29.1",
-    "@wdio/appium-service": "^7.29.1",
-    "@wdio/browserstack-service": "^7.29.1",
-    "@wdio/cli": "^7.29.1",
-    "@wdio/cucumber-framework": "^7.29.0",
-    "@wdio/junit-reporter": "^7.29.1",
-    "@wdio/local-runner": "^7.29.1",
-    "@wdio/sauce-service": "^7.29.1",
-    "@wdio/selenium-standalone-service": "^7.25.1",
-    "@wdio/spec-reporter": "^7.29.1",
-    "@wdio/sync": "^7.27.0",
+    "@wdio/allure-reporter": "^8.1.2",
+    "@wdio/appium-service": "^8.1.3",
+    "@wdio/browserstack-service": "^8.1.3",
+    "@wdio/cli": "^8.1.3",
+    "@wdio/cucumber-framework": "^8.1.2",
+    "@wdio/globals": "^8.1.3",
+    "@wdio/junit-reporter": "^8.1.2",
+    "@wdio/local-runner": "^8.1.3",
+    "@wdio/sauce-service": "^8.1.3",
+    "@wdio/selenium-standalone-service": "^8.1.2",
+    "@wdio/spec-reporter": "^8.1.2",
     "allure-commandline": "^2.20.1",
-    "babel-plugin-source-map-support": "^2.1.3",
-    "chai": "^4.2.0",
-    "cucumber-tag-expressions": "^2.0.3",
-    "eslint": "^7.2.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint": "^8.31.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "node-excel-to-json": "0.0.3",
-    "underscore": "^1.11.0",
-    "wdio-chromedriver-service": "^7",
-    "wdio-json-reporter": "^3.0.0",
-    "wdio-lambdatest-service": "^1.0.14",
-    "webdriverio": "^7",
+    "eslint-plugin-promise": "^6.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4",
+    "wdio-chromedriver-service": "^8.0.1",
+    "wdio-wait-for": "^3.0.1",
+    "webdriverio": "^8.1.3",
     "xunit-viewer": "^7.2.0"
   },
   "dependencies": {
     "@wdio/codemod": "^0.12.0",
-    "fibers": "^4.0.3",
     "jscodeshift": "^0.14.0"
   }
 }
